[gd_scene load_steps=2 format=3 uid="uid://d21n0oa01l2kr"]

[ext_resource type="Script" path="res://scripts/value.gd" id="1_oupkm"]

[node name="value" type="VBoxContainer"]
offset_right = 618.0
offset_bottom = 64.0
size_flags_horizontal = 3
theme_override_constants/separation = -4
script = ExtResource("1_oupkm")

[node name="text" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "value"
fit_content = true

[node name="CBtn" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
layout_mode = 2
value = 5.0

[connection signal="color_changed" from="CBtn" to="." method="_on_c_btn_color_changed"]
[connection signal="pressed" from="CBtn" to="." method="_on_c_btn_pressed"]
[connection signal="toggled" from="CBtn" to="." method="_on_c_btn_toggled"]
